--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -31,8 +31,8 @@
 }
 
 .theFooter{
-color: white;
-font-family: Montserrat-Light;
+color: black;
+font-family: Montserrat-Black;
 }
 
 Input::placeholder{
