--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .App {
   text-align: center;
   position: relative;
-  width: 100%;
+  width: 99vw;
   height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 1px solid red;
 }
 
 .App > div {
@@ -21,16 +22,23 @@ div > div {
 div > h3 {
   color: #fff;
 }
-.App> div:before {
+.App > div:before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 89vw;
   height: 100%;
-  /* background: linear-gradient(45deg, #ff0080, #6827b0); */
-  /* background: linear-gradient(45deg, #1da1f2, #6827b0);   */
-  background: linear-gradient(45deg, #53e996, #07774c);  
-  border-radius: 0 0 50% 50%/0 0 50% 50%;
-  transform: scaleX(1.5)
+  background: linear-gradient(45deg, #53ec98, #046842);
+  border-radius: 0 0 45% 45%/0 0 25% 25%;
+  transform: scaleX(1.19);
+}
+.texts {
+  margin-top: 30px;
+  padding: 2px 20px;
+  font-family: Montserrat-Black;
+  font-size: 0.85em;
+  text-align: center;
+  align-content: center;
+  color: #07774c;
 }
