--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+    /* border: 1px solid red; */
   text-align: center;
   position: relative;
   width: 99vw;
@@ -26,17 +27,18 @@ div > h3 {
   position: absolute;
   top: 0;
   left: 0;
+  /* border: 1px solid red; */
   width: 89vw;
-  height: 100%;
-  background: linear-gradient(45deg, #53ec98, #046842);
+  height: 84vh;
+  background: linear-gradient(45deg, #57eb99, #065c3b);
   border-radius: 0 0 45% 45%/0 0 25% 25%;
   transform: scaleX(1.19);
 }
 .texts {
-  margin-top: 30px;
+  margin: 30px auto;
   padding: 2px 20px;
   font-family: Montserrat-Black;
-  font-size: 0.85em;
+  font-size: 10px;
   text-align: center;
   align-content: center;
   color: #07774c;
