--- a/src/Components/checkBox.css
+++ b/src/Components/checkBox.css
@@ -2,14 +2,16 @@
 .container {
   display: block;
   position: relative;
-  padding-left: 5px;
-  margin-bottom: 12px;
+  padding-left: 11px;
+  /* border: 1px solid; */
+  margin-bottom: 10px;
   cursor: pointer;
-  font-size: 12px;
+  font-size: 11px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  font-family: Montserrat;
 }
 
 /* Hide the browser's default checkbox */
@@ -26,8 +28,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 21px;
-  width: 21px;
+  height: 14px;
+  width: 14px;
   background-color: #eee;
 }
 
